scripts/nullaway/wpi/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8.txt
../wpi/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/iterator/Station.java:55: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.notification = notification;
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/iterator/MetroLine.java:114: error: [NullAway] dereferenced expression this.current is @Nullable
            Station next = this.current.getStation();
                                       ^
    (see http://t.uber.com/nullaway )
../wpi/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/iterator/MetroLine.java:143: error: [NullAway] dereferenced expression current is @Nullable
            Station next = current.station;
                                  ^
    (see http://t.uber.com/nullaway )
3 errors
